--- a/static/css/themes/pink.css
+++ b/static/css/themes/pink.css
@@ -1,12 +1,22 @@
-.pink main, .pink ul, .pink footer > div, .pink #window, .pink #window > div:first-child {
+.pink main,
+.pink #userlist,
+.pink footer > div,
+.pink #window,
+.pink #window > div:first-child {
     border-color: #F09;
 }
 
-.pink header, .pink #window > div:first-child, .pink footer > div > i, .pink footer, .pink #close {
+.pink header,
+.pink #window > div:first-child,
+.pink footer > div > i,
+.pink footer,
+.pink #close {
     background: #F09;
 }
 
-.pink footer > div > i, .pink #close, .pink #window > div:first-child {
+.pink footer > div > i,
+.pink #close,
+.pink #window > div:first-child {
     color: #EEE;
 }
 
@@ -21,7 +31,10 @@
     opacity: 0.8;
 }
 
-.pink, .pink ul, .pink #window, .pink #input, .pink select {
+.pink,
+.pink #userlist,
+.pink #window,
+.pink #input {
     background: #FCE;
     color: #F09;
 }
@@ -30,10 +43,13 @@
     background-color: #FCE;
 }
 
-.pink ::-webkit-scrollbar, .pink ::-webkit-scrollbar-thumb {
+.pink ::-webkit-scrollbar,
+.pink ::-webkit-scrollbar-thumb {
     background-color: #F09;
 }
 
-.pink ::-webkit-scrollbar-track, .pink ::-webkit-scrollbar, .pink ::-webkit-scrollbar-thumb {
+.pink ::-webkit-scrollbar-track,
+.pink ::-webkit-scrollbar,
+.pink ::-webkit-scrollbar-thumb {
     border-color: #FCE;
 }
